[[bin]]
name = "test"
path = "core_test/src/lib.rs"

[package]
name = "rust-test"
version = "0.1.0"
authors = ["kozmod <kozmo23g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "core_test",
    "sleep_client",
    "algorithm"
]
