[package]
name = "sleep_client"
version = "1.0.0"
authors = ["kozmod <kozmo23g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"

[dependencies.async-std]
version = "1.9"
features = ["attributes"]
